<resources>
    <string name="app_name">theCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="period">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="i">\u0130</string>
    <string name="sin">sin</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="pie">\u03C0</string>
    <string name="e">\u0435</string>
    <string name="percent">%</string>
    <string name="fact">!</string>
    <string name="root">\u221A</string>
    <string name="exp">^</string>
    <string name="left">(</string>
    <string name="right">)</string>
    <string name="menu">Scientific</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
