<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:orientation="vertical"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:editable="false"
        android:hint="0"
        android:textSize="70sp"
        android:id="@+id/display"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom|right"


        />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#000"
        android:layout_weight=".03"
        android:id="@+id/delete"
        android:background="#f0f"
        android:layout_gravity="right"
        />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".77"
        android:columnCount="4"
        android:rowCount="4"
        android:gravity="center">


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/sin"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/sin"
            android:layout_column="0"
            android:layout_row="0"
            android:background="#22C7BE"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"


            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/cos"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/cos"
            android:layout_column="1"
            android:layout_row="0"
            android:background="#22C7BE"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/tan"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/tan"
            android:layout_column="2"
            android:layout_row="0"
            android:background="#22C7BE"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/i"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/i"
            android:layout_column="3"
            android:layout_row="0"
            android:background="#22C7BE"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/ln"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/ln"
            android:layout_column="0"
            android:layout_row="1"
            android:background="#22C7BE"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/log"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/log"
            android:layout_column="1"
            android:layout_row="1"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />
        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/pie"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/pi"
            android:layout_column="2"
            android:layout_row="1"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />
        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/e"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/e"
            android:layout_column="3"
            android:layout_row="1"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/percent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/percent"
            android:layout_column="0"
            android:layout_row="2"
            android:background="#22C7BE"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/fact"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/fact"
            android:layout_column="1"
            android:layout_row="2"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/root"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/root"
            android:layout_column="2"
            android:layout_row="2"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/exp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/exp"
            android:layout_column="3"
            android:layout_row="2"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/left"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/left"
            android:layout_column="0"
            android:layout_row="3"
            android:background="#22C7BE"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/right"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/right"
            android:layout_column="1"
            android:layout_row="3"
            android:background="#22C7BE"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_column="2"
            android:layout_row="3"
            android:background="#fff"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_column="3"
            android:layout_row="3"
            android:background="#fff"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


    </GridLayout>




</LinearLayout>

