<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:orientation="vertical"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:editable="false"
        android:hint="0"
        android:textSize="70sp"
        android:id="@+id/display"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom|right"


        />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#000"
        android:layout_weight=".03"
        android:id="@+id/delete"
        android:background="#f0f"
        android:layout_gravity="right"
        />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".77"
        android:columnCount="4"
        android:rowCount="4"
        android:gravity="center">


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/num7"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n7"
            android:layout_column="0"
            android:layout_row="0"
            android:background="#7484C2"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"


            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/num8"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/n8"
            android:layout_column="1"
            android:layout_row="0"
            android:background="#7484C2"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/num9"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n9"
            android:layout_column="2"
            android:layout_row="0"
            android:background="#7484C2"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/divide"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/divide"
            android:layout_column="3"
            android:layout_row="0"
            android:background="#ff0"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/num4"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n4"
            android:layout_column="0"
            android:layout_row="1"
            android:background="#7484C2"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="5"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n5"
            android:layout_column="1"
            android:layout_row="1"
            android:background="#7484C2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />
        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="6"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n6"
            android:layout_column="2"
            android:layout_row="1"
            android:background="#7484C2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />
        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="X"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/multiply"
            android:layout_column="3"
            android:layout_row="1"
            android:background="#ff0"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="@string/num1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n1"
            android:layout_column="0"
            android:layout_row="2"
            android:background="#7484C2"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="2"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n2"
            android:layout_column="1"
            android:layout_row="2"
            android:background="#7484C2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="3"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n3"
            android:layout_column="2"
            android:layout_row="2"
            android:background="#7484C2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="-"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/minus"
            android:layout_column="3"
            android:layout_row="2"
            android:background="#ff0"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="."
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/period"
            android:layout_column="0"
            android:layout_row="3"
            android:background="#7484C2"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="0"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/n0"
            android:layout_column="1"
            android:layout_row="3"
            android:background="#7484C2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="="
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/equal"
            android:layout_column="2"
            android:layout_row="3"
            android:background="#ff0"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


        <Button
            android:layout_height="85dp"
            android:layout_width="86dp"
            android:text="+"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000"
            android:id="@+id/plus"
            android:layout_column="3"
            android:layout_row="3"
            android:background="#ff0"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            />


    </GridLayout>




</LinearLayout>

